test: added test cases

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "belajar-hapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon index.js",
-    "start": "NODE_ENV=production node index.js"
+    "test": "mocha --recursive ./test/**/*.test.mjs",
+    "dev": "NODE_ENV=development nodemon index.mjs",
+    "start": "NODE_ENV=production node index.mjs"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,9 +17,12 @@
     "@hapi/hapi": "^20.2.2",
     "@hapi/inert": "^7.0.0",
     "@hapi/vision": "^7.0.0",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "joi": "^17.6.4"
   },
   "devDependencies": {
-    "eslint": "^8.26.0"
+    "eslint": "^8.26.0",
+    "mocha": "^10.1.0",
+    "@hapi/code": "^9.0.1"
   }
 }
