--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@hapi/boom": "^10.0.0",
     "@hapi/hapi": "^20.2.2",
     "@hapi/inert": "^7.0.0",
+    "@hapi/jwt": "^3.0.0",
     "@hapi/vision": "^7.0.0",
+    "bcrypt": "^5.1.0",
     "handlebars": "^4.7.7",
     "joi": "^17.6.4"
   },
   "devDependencies": {
+    "@hapi/code": "^9.0.1",
     "eslint": "^8.26.0",
-    "mocha": "^10.1.0",
-    "@hapi/code": "^9.0.1"
+    "mocha": "^10.1.0"
   }
 }
