test: added token api test case

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.mjs",
   "scripts": {
     "test": "mocha --recursive ./test/**/*.test.mjs",
-    "dev": "NODE_ENV=development nodemon index.mjs",
+    "dev": "NODE_ENV=development JWT_SECRET=test123 nodemon index.mjs",
     "start": "NODE_ENV=production node index.mjs"
   },
   "type": "module",
@@ -20,6 +20,7 @@
     "@hapi/vision": "^7.0.0",
     "bcrypt": "^5.1.0",
     "handlebars": "^4.7.7",
+    "hapi-auth-jwt2": "^10.2.0",
     "joi": "^17.6.4"
   },
   "devDependencies": {
